--- a/templates/azure_pact_delete_branch_with_params.yml
+++ b/templates/azure_pact_delete_branch_with_params.yml
@@ -1,45 +1,35 @@
-# TODO
+# TO TEST
 
-name: "delete-branch"
-description: "Deletes a pacticipant branch"
-branding:
-  icon: "check"
-  color: "green"
-inputs:
-  broker_url:
-    description: "The url of your pact broker"
-    required: true
-  token:
-    description: "Your pact broker token (required for PactFlow)"
-  username:
-    description: "Your pact broker username"
-  password:
-    description: "Your pact broker password"
-  application_name:
-    description: "The name of your application (usually project name)"
-    required: true
-  branch:
-    description: "The branch of your application to delete"
-    required: true
-  error_when_not_found:
-    description: "Raise an error if the branch that is to be deleted is not found"
-    required: false
-    type: choice
-    options:
-      - true
-      - false
+# name: "delete-branch"
+# description: "Deletes a pacticipant branch"
 
-runs:
-  using: "composite"
-  steps:
-    - run: ${GITHUB_ACTION_PATH}/deleteBranch.sh
-      shell: bash
-      env: 
-        PACT_BROKER_BASE_URL: ${{ inputs.broker_url || env.PACT_BROKER_BASE_URL }} 
-        PACT_BROKER_TOKEN: ${{ inputs.token || env.PACT_BROKER_TOKEN }} 
-        PACT_BROKER_USERNAME: ${{ inputs.username || env.PACT_BROKER_USERNAME }} 
-        PACT_BROKER_PASSWORD: ${{ inputs.password || env.PACT_BROKER_PASSWORD }} 
-        application_name: ${{ inputs.application_name || env.application_name }}
-        version: ${{ inputs.version || env.version }}
-        branch: ${{ inputs.branch || env.branch }}
-        error_when_not_found: ${{ inputs.error_when_not_found || env.error_when_not_found }}
+parameters:
+  - name: broker_url # "The url of your pact broker"
+    default: ""
+  - name: token # "Your pact broker token (required for PactFlow)"
+    default: ""
+  - name: username # "Your pact broker username"
+    default: ""
+  - name: password # "Your pact broker password"
+    default: ""
+  - name: application_name # "The name of your application (usually project name)"
+    default: false
+  branch: # "The branch of your application to delete"
+    default: false
+  error_when_not_found: # "Raise an error if the branch that is to be deleted is not found"
+    default: false
+    type: boolean
+
+steps:
+- script: |
+    ./templates/scripts/deleteBranch.sh
+  displayName: Delete Branch
+  env: 
+    PACT_BROKER_BASE_URL: ${{ coalesce(parameters.broker_url, variables.PACT_BROKER_BASE_URL) }}
+    PACT_BROKER_TOKEN: ${{ coalesce(parameters.token, variables.PACT_BROKER_TOKEN) }}
+    PACT_BROKER_USERNAME: ${{ coalesce(parameters.username, variables.PACT_BROKER_USERNAME) }}
+    PACT_BROKER_PASSWORD: ${{ coalesce(parameters.password, variables.PACT_BROKER_PASSWORD) }}
+    application_name: ${{ coalesce(parameters.application_name , variables.application_name) }}
+    COMMIT: ${{ coalesce(parameters.version, variables.COMMIT) }}
+    BRANCH: ${{ coalesce(parameters.branch, variables.BRANCH) }}
+    error_when_not_found: ${{ inputs.error_when_not_found || env.error_when_not_found }}
