ci(azure): add pact cli template

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,12 +13,15 @@ variables:
     value: https://testdemo.pactflow.io
 
 steps:
+
+## Setup Pact CLI
+- template: templates/azure_pact_cli.yml@self
+- script: pact-broker version
+  displayName: "pact-broker version"
+
 - script: |
     dotnet test tests
   displayName: ✅  Test
-
-- template: templates/azure_pact_cli.yml@self # by default it uses main, use self to read from current repo
-- script: pact-broker version
 
 ## Executing recommend workflow manually, via re-usable templates in same repo, with inputs.
 
