ci(azure): add pact cli template

--- a/templates/azure_pact_can_i_deploy_with_params.yml
+++ b/templates/azure_pact_can_i_deploy_with_params.yml
@@ -55,5 +55,5 @@ steps:
     retry_while_unknown: ${{ coalesce(parameters.retry_while_unknown , variables.retry_while_unknown) }}
     retry_interval: ${{ coalesce(parameters.retry_interval , variables.retry_interval) }}
     dry_run: ${{ parameters.dry_run }}
-    BRANCH: ${{ coalesce(parameters.branch, variables.BRANCH) }}
+    BRANCH: ${{ parameters.branch }}
     main_branch: ${{ parameters.main_branch }}
