--- a/templates/azure_pact_verifier_cli.yml
+++ b/templates/azure_pact_verifier_cli.yml
@@ -6,6 +6,6 @@ parameters:
 
 steps:
 - script: |
-    curl -sSL https://github.com/YOU54F/pact-reference/blob/master/scripts/install-pact_verifier_cli.sh | bash
+    curl -sSL https://raw.githubusercontent.com/YOU54F/pact-reference/refs/heads/master/scripts/install-pact_verifier_cli.sh | bash
     echo '##vso[task.prependpath]$HOME/.pact/bin'
   displayName: Setup Pact Verifier CLI
