--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,9 +23,23 @@ steps:
 ## Setup Rust based CLI's
 
 - template: templates/azure_pact_plugin_cli.yml@self
+
+- script: pact-plugin-cli --help
+  displayName: pact_plugin_cli
+
 - template: templates/azure_pact_mock_server_cli.yml@self
+
+- script: pact_mock_server_cli --help
+  displayName: pact_mock_server_cli
+
 - template: templates/azure_pact_stub_server.yml@self
+
+- script: pact-stub-server --help
+  displayName: pact-stub-server
+
 - template: templates/azure_pact_verifier_cli.yml@self
+- script: pact_verifier_cli --help
+  displayName: pact_verifier_cli
 
 ## Run tests
 
