--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,8 +29,8 @@ steps:
 
 - template: templates/azure_pact_mock_server_cli.yml@self
 
-- script: pact_mock_server_cli --help
-  displayName: pact_mock_server_cli
+# - script: pact_mock_server_cli --help
+#   displayName: pact_mock_server_cli
 
 - template: templates/azure_pact_stub_server.yml@self
 
