ci(azure): test rust cli

--- a/templates/azure_pact_plugin_cli.yml
+++ b/templates/azure_pact_plugin_cli.yml
@@ -7,6 +7,5 @@ parameters:
 steps:
 - script: |
     curl -sSL https://raw.githubusercontent.com/pact-foundation/pact-plugins/refs/heads/main/scripts/install-plugin-cli.sh | bash
-    echo $HOME
-    echo '##vso[task.prependpath]$HOME/vsts/.pact/bin'
+    echo '##vso[task.prependpath]/home/vsts/.pact/bin'
   displayName: Setup Pact Plugin CLI
