--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,11 +14,6 @@ variables:
 
 steps:
 
-## Setup Pact CLI
-- template: templates/azure_pact_cli.yml@self
-- script: pact-broker version
-  displayName: "pact-broker version"
-
 
 ## Setup Rust based CLI's
 
@@ -29,8 +24,8 @@ steps:
 
 - template: templates/azure_pact_mock_server_cli.yml@self
 
-# - script: pact_mock_server_cli --help
-#   displayName: pact_mock_server_cli
+- script: pact_mock_server_cli --help
+  displayName: pact_mock_server_cli
 
 - template: templates/azure_pact_stub_server.yml@self
 
@@ -40,6 +35,11 @@ steps:
 - template: templates/azure_pact_verifier_cli.yml@self
 - script: pact_verifier_cli --help
   displayName: pact_verifier_cli
+
+## Setup Pact CLI
+- template: templates/azure_pact_cli.yml@self
+- script: pact-broker version
+  displayName: "pact-broker version"
 
 ## Run tests
 
