--- a/templates/azure_pact_mock_server_cli.yml
+++ b/templates/azure_pact_mock_server_cli.yml
@@ -7,5 +7,5 @@ parameters:
 steps:
 - script: |
     curl -sSL https://raw.githubusercontent.com/YOU54F/pact-core-mock-server/refs/heads/main/scripts/install-pact_mock_server_cli.sh | bash
-    echo '##vso[task.prependpath]$HOME/.pact/bin'
+    echo '##vso[task.prependpath]/home/vsts/.pact/bin'
   displayName: Setup Pact Mock Server CLI
