--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,63 +6,71 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  - template: templates/azure_pact_variables.yml@self # re-use common variables, to set commit, branch and build uri
+  - template: templates/azure_pact_variables.yml@pact_templates # re-use common variables, to set commit, branch and build uri
   - name: PACTICIPANT
     value: "pactflow-example-consumer-dotnet"
   - name: PACT_BROKER_BASE_URL
     value: https://testdemo.pactflow.io
+
+resources:
+  repositories:
+    - repository: pact_templates
+      type: github
+      name: you54f/azure-pipelines-templates
+      # ref: refs/heads/templates
+      endpoint: azure-templates-pact-github
 
 steps:
 
 
 ## Setup Rust based CLI's
 
-- template: templates/azure_pact_plugin_cli.yml@self
+- template: templates/azure_pact_plugin_cli.yml@pact_templates
 
 - script: pact-plugin-cli --help
   displayName: pact_plugin_cli
 
-- template: templates/azure_pact_mock_server_cli.yml@self
+- template: templates/azure_pact_mock_server_cli.yml@pact_templates
 
 - script: pact_mock_server_cli --help
   displayName: pact_mock_server_cli
 
-- template: templates/azure_pact_stub_server.yml@self
+- template: templates/azure_pact_stub_server.yml@pact_templates
 
 - script: pact-stub-server --help
   displayName: pact-stub-server
 
-- template: templates/azure_pact_verifier_cli.yml@self
+- template: templates/azure_pact_verifier_cli.yml@pact_templates
 - script: pact_verifier_cli --help
   displayName: pact_verifier_cli
 
 ## Setup Pact CLI
-- template: templates/azure_pact_cli.yml@self
+- template: templates/azure_pact_cli.yml@pact_templates
 - script: pact-broker version
   displayName: "pact-broker version"
 
-## Run tests
+# ## Run tests
 
-- script: |
-    dotnet test tests
-  displayName: ✅  Test
+# - script: |
+#     dotnet test tests
+#   displayName: ✅  Test
 
-## Executing recommend workflow manually, via re-usable templates in same repo, with inputs.
+# ## Executing recommend workflow manually, via re-usable templates in same repo, with inputs.
 
-- template: templates/azure_pact_publish_with_params.yml@self # by default it uses main, use self to read from current repo
-  parameters:
-    pactfiles: pacts
-    token: $(PACT_BROKER_TOKEN) # token should be set as secret variable, in users pipeline
-- template: templates/azure_pact_can_i_deploy_with_params.yml
-  parameters:
-    to_environment: production
-    application_name: $(PACTICIPANT)
-    token: $(PACT_BROKER_TOKEN)
-- template: templates/azure_pact_record_deployment_with_params.yml
-  parameters:
-    environment: production
-    application_name: $(PACTICIPANT)
-    token: $(PACT_BROKER_TOKEN)
+# - template: templates/azure_pact_publish_with_params.yml@self # by default it uses main, use self to read from current repo
+#   parameters:
+#     pactfiles: pacts
+#     token: $(PACT_BROKER_TOKEN) # token should be set as secret variable, in users pipeline
+# - template: templates/azure_pact_can_i_deploy_with_params.yml
+#   parameters:
+#     to_environment: production
+#     application_name: $(PACTICIPANT)
+#     token: $(PACT_BROKER_TOKEN)
+# - template: templates/azure_pact_record_deployment_with_params.yml
+#   parameters:
+#     environment: production
+#     application_name: $(PACTICIPANT)
+#     token: $(PACT_BROKER_TOKEN)
 
 ## Executing recommend workflow manually, via templates in same repo, following below docker commands
 
