ci(azure): test checkout of remote scripts

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,9 @@ steps:
 # Run tests
 
 - script: |
+    pwd
     ls
+    ls $(build.sourcesdirectory)
     # dotnet test tests
   displayName: ✅  Test
 
